Fikset navigationsbar og har tilføjet en MorePage som er til alle indstillingerne som dark/light mode

--- a/MauiApp1/MauiApp1.csproj
+++ b/MauiApp1/MauiApp1.csproj
@@ -86,6 +86,9 @@
 	  <MauiXaml Update="JobDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="MorePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ThemePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
